--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="en-us">
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href="./assets/style.css">
+        <title>website</title>
+    </head>
+    
+    <body>
+        <header class="header">
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
