further through the skeleton code

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en-us">
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./assets/style.css">
-        <title>website</title>
+        <title>Professional Portfolio</title>
     </head>
     
     <body>
         <header class="header">
+            <h1>William P. </h1> <h5>About Me     Work    Contact Me    Resume</h5>
 
 
 
