completed 'contact me' and README with some bugs that are too annoying to fix after 20 hours of working on this already

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p>
                     I am, furthermore, an aspiring novelist and creative
                     writer. I have two published works, one poem and one short story, at the
-                    moment, and I plans to do more. I have various passion projects, utilizing my
+                    moment, and I plan to do more. I have various passion projects, utilizing my
                     skills in what way I can. Ultimately, William is well-rounded, skilled, and 
                     determined to forge my future.
                 </p>
@@ -90,8 +90,22 @@
                     <img src="./assets/images/Added Media and Features.PNG">
                     </a>
                 </section>
-            </div>    
+            </div>
         </main>
+       <footer>
+            <section class="contact-me"></section>
+            <header id="contact-me"></header>
+                <h1>Contact Me</h1>
+            <nav>
+                <ul>
+                    <li>(602)377-3904</li>
+                    <li>wwareing11@gmail.com</li>
+                    <li><a href=https://github.com/Bodalla>GitHub</a></li>
+                </ul>
+            </nav>
+       </footer>
+
+        
         
 
 
