Added the resume link, still couldn't fix the flexbox bug in the 'work' section, but I'll have to turn it in as is, I suppose. Also, I updated the README and added some comments for future reference

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a href="#about-me">About Me</a></li>
                     <li><a href="#work">Work</a></li>
                     <li><a href="#contact-me">Contact Me</a></li>
-                    <li><a href="resume">Resume</a></li>
+                    <li><a href="https://bodalla.github.io/William-Wareing-Resume/" target="William-Wareing-Resume">Resume</a></li>
 
                 </ul>
             </nav>
@@ -91,6 +91,7 @@
                     </a>
                 </section>
             </div>
+            <!--This is where the bug occurs. Any text after this point flows into the prior section-->
         </main>
        <footer>
             <section class="contact-me"></section>
