added link to project 'reel search' website

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                     <img src="./assets/images/Code Rewrite.PNG">
                     </a>
                 </section>
-                <section class="glitch-fixing">
-                    <header>A website whose bugs and errors I eliminated</header>
-                    <a href="addlater.addlater" target="add-later">
-                    <img src="./assets/images/Glitch Fixing.PNG">
+                <section class="reel-search">
+                    <header>A website I created with a team</header>
+                    <a href="https://jamesxalis.github.io/Reel_Search/index.html" target="Reel Search">
+                    <img src="./assets/images/REEL SEARCH IMG.PNG">
                     </a>
                 </section>
                 <section class="added-media-and-features">
